# PEPBoy

./: .gitignore  .gitmodules  .roomodes  FINAL_ACTION_PLAN.md  LICENSE  NEXT_STEPS_IMPLEMENTATION_PLAN.md  README.md  TDD_ARCHITECTURE_DESIGN.md  claude_convo.md  content_parsing.md  gemini-plan.md  orm_integrating_o3.md  pepboys_resource.md  pyproject.toml
backend/: PEPBoy.db  alembic.ini  alembic_error.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 86bd3823fd00_initial_schema.py
backend/src/: app.py
backend/src/models/: database.py  db_config.py  orm_models.py  pydantic_models.py
backend/src/services/: content_processor.py  data_fetcher.py  pep_repository.py
backend/src/tasks/: content_parsing.py  populate_db.py
backend/tests/: README.md  conftest.py
backend/tests/fixtures/: factories.py
backend/tests/unit/: test_data_fetcher.py  test_models.py  test_pep_repository.py
frontend/: .env.development  TODO_claude.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Header.tsx  HomePage.tsx  Layout.tsx  PEPDetailPage.tsx  PEPList.tsx  PEPListItem.tsx  PaginationControls.tsx  SearchBar.tsx  SearchResultPage.tsx
frontend/src/components/__tests__/: PEPList.test.tsx  SearchBar.test.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/test-utils/: README.md  setup-tests.ts  test-utils.tsx
