[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepboy"
description = "Python Enhancement Proposal Reader and Search"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
