[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "PEPBoy-backend"
description = "Backend API for PEPBoy"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.104.0",
	"uvicorn[standard]>=0.24.0",
	"sqlalchemy>=2.0.0",
	"alembic>=1.12.0",
	"httpx>=0.25.0",
	"python-multipart>=0.0.6",
	"docutils>=0.20.0",
	"beautifulsoup4>=4.12.0",
	"apscheduler>=3.10.0",
	"python-slugify>=8.0.0",
	"pydantic>=2.11.7",
	"pydantic-settings>=2.10.1",
	"pytest>=8.4.1",
	"pytest-asyncio>=1.1.0",
	"pytest-cov>=6.2.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-asyncio>=0.21.0",
	"pytest-cov>=4.1.0",
	"black>=23.9.0",
	"ruff>=0.0.290",
]
